--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,9 +11,9 @@
     <%= javascript_importmap_tags %>
   </head>
 
-  <body class="container">
-    <p class="notice"><%= notice %></p>
-    <p class="alert"><%= alert %></p>
+  <body class="container custom-container">
+    <h2 class="notice"><%= notice %></h2>
+    <h2 class="alert"><%= alert %></h2>
     <%= yield %>
   </body>
 </html>
