--- a/app/views/email_newsletters/index.html.erb
+++ b/app/views/email_newsletters/index.html.erb
@@ -1,14 +1,12 @@
-<p style="color: green"><%= notice %></p>
-
 <h1><%= t(:title_e_n) %></h1>
-<%= link_to t(:add_newsletter), new_email_newsletter_path, class: "btn btn-success btn-lg" %>
+<%= link_to t(:add), new_email_newsletter_path, class: "btn btn-success btn-lg" %>
 
 <hr>
 <div id="email_newsletters">
   <% @email_newsletters.each do |email_newsletter| %>
     <%= render email_newsletter %>
     <p>
-      <%= link_to t(:show_newsletter), email_newsletter, class: "btn btn-info btn-lg"%>
+      <%= link_to t(:show), email_newsletter, class: "btn btn-info btn-lg"%>
     </p>
   <% end %>
 </div>
